# smart_home

./: .gitignore  README.md
smart_home/: CMakeLists.txt  package.xml
smart_home_avr/: CMakeLists.txt  mainpage.dox  make_libraries.py  package.xml
smart_home_avr/src/: .gitignore  DHT22.c  DHT22.h  Makefile  atmega32hardware.h  avr_node.cpp  avr_time.c  avr_uart.c  ros.h
smart_home_avr/src/ros_lib/face_recognition/: FRClientGoal.h  FaceRecognitionFeedback.h  FaceRecognitionGoal.h  FaceRecognitionResult.h
smart_home_avr/src/ros_lib/smart_home_avr/: AvrHumidity.h  AvrReadPin.h  AvrSetPin.h  AvrTemperature.h
smart_home_avr/src/ros_lib/smart_home_core/: Command.h  Notification.h
smart_home_avr/src/ros_lib/smart_home_sensors/: ReadSensorBit.h  ReadSensorFloat.h  WriteSensorBit.h  WriteSensorFloat.h
smart_home_avr/src/ros_lib/sound_play/: SoundRequest.h
smart_home_avr/srv/: AvrSetPin.srv
smart_home_core/: CMakeLists.txt  package.xml  setup.py  smart_home.launch
smart_home_core/launch/: smart_home.launch  smart_home_client.launch  smart_home_server.launch
smart_home_core/msg/: Notification.msg
smart_home_core/test/: test_command_server.launch  test_command_server.py  test_notification_node.launch  test_notification_node.py
smart_home_sensors/: CMakeLists.txt  package.xml  setup.py
smart_home_sensors/launch/: sensor.launch
smart_home_sensors/srv/: ReadSensorBit.srv  ReadSensorFloat.srv  WriteSensorBit.srv  WriteSensorFloat.srv
smart_home_sensors/test/: test-sensor-base.launch  (+1 more)
smart_home_speech/: CMakeLists.txt  package.xml  setup.py
(+18 files in other folders)
